--- a/keyframe/style.css
+++ b/keyframe/style.css
@@ -7,6 +7,7 @@
 body {
   height: 100vh;
   width: 100vw;
+  overflow: hidden;
 }
 
 .sky,
@@ -49,12 +50,19 @@ body {
   top: -2rem;
   left: 0;
   animation-name: mario;
-  animation-duration: 3s;
+  animation-duration: 5s;
+  /* animation-fill-mode: forwards;
+  animation-fill-mode: backwards; */
+  animation-fill-mode: both;
+  /* animation-delay: 2s; */
+
+  /* --- Repeating the Animation --- */
+  animation-iteration-count: infinite;
 }
 
 @keyframes mario {
   from {
-    transform: translateX(0);
+    transform: translateX(-10vw);
   }
 
   to {
