Added our luigi

--- a/keyframe/style.css
+++ b/keyframe/style.css
@@ -41,16 +41,18 @@ body {
   top: 50%;
   border-top: 5px dashed #fff;
   height: 0px;
-  z-index: 10;
+  /* z-index: 10; */
 }
 
-.mario {
-  height: 60%;
+/*// ELEMENTS TO ANIMATE //*/
+.mario,
+.luigi {
+  height: 50%;
   position: absolute;
   top: -2rem;
   left: 0;
   animation-name: mario;
-  animation-duration: 5s;
+  animation-duration: 8s;
   /* animation-fill-mode: forwards;
   animation-fill-mode: backwards; */
   animation-fill-mode: both;
@@ -60,6 +62,12 @@ body {
   animation-iteration-count: infinite;
 }
 
+.luigi {
+  animation-direction: reverse;
+  animation-duration: 5s;
+  top: 4rem;
+}
+/* --- // KEYFRAMES // --- */
 @keyframes mario {
   from {
     transform: translateX(-10vw);
@@ -69,6 +77,13 @@ body {
     transform: translateX(100vw);
   }
 }
-/*// ELEMENTS TO ANIMATE //*/
 
-/*// KEYFRAMES //*/
+@keyframes luigi {
+  from {
+    transform: translateX(-10vw);
+  }
+
+  to {
+    transform: translateX(100vw);
+  }
+}
