--- a/keyframe/style.css
+++ b/keyframe/style.css
@@ -73,6 +73,9 @@ body {
   top: 4rem;
   /* animation-timing-function: ease-out; */
   animation-timing-function: linear;
+
+  /* --- We can use own function --- */
+  animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 /* --- // KEYFRAMES // --- */
 @keyframes mario {
