--- a/keyframe/style.css
+++ b/keyframe/style.css
@@ -68,14 +68,33 @@ body {
 }
 
 .luigi {
-  animation-direction: reverse;
+  /* animation-direction: reverse; */
   animation-duration: 5s;
   top: 4rem;
   /* animation-timing-function: ease-out; */
   animation-timing-function: linear;
 
   /* --- We can use own function --- */
-  animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  /* animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275); */
+}
+
+/* ---Cloud--- */
+
+.cloud {
+  position: absolute;
+}
+
+.cloud:nth-child(1) {
+  width: 200px;
+  opacity: 0.5;
+  top: 100px;
+  animation: wind 80s linear infinite reverse;
+}
+
+.cloud:nth-child(2) {
+  width: 300px;
+  top: 0;
+  animation: wind 50s linear infinite reverse;
 }
 /* --- // KEYFRAMES // --- */
 @keyframes mario {
@@ -95,5 +114,15 @@ body {
 
   to {
     transform: translateX(100vw);
+  }
+}
+
+@keyframes wind {
+  from {
+    left: -100px;
+  }
+
+  to {
+    left: 100%;
   }
 }
